# siv3d_proj_ver_checker

./: .gitignore  LICENSE.md  README.md  extract_versions.py  list_files.py  main.py  pyproject.toml  siv3d_proj_ver_checker.py  utils.py
src/siv3d_proj_ver_checker/: config.py  extract_versions.py  list_files.py  main.py  utils.py
